Se corrige publisher

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "gruvbox-custom-theme",
 	"displayName": "Gruvbox Custom Theme",
 	"description": "Gruvbox Custom Theme",
-	"publisher": "kenethrrizzo",
+	"publisher": "kenethriera",
 	"version": "1.0.0",
 	"icon": "images/logo.png",
 	"engines": {
